--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 
     <title>Sketch</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="rotating-blocks/style.css">
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
-    <script src="sketch.js"></script>
+    <script src="rotating-blocks/sketch.js"></script>
+    <script src="classes/Block.js"></script>
   </body>
 </html>
