trigonometry\sketch.js: Added trigo animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-    <script src="rotating-blocks/sketch.js"></script>
+    <!-- <script src="rotating-blocks/sketch.js"></script> -->
+    <script src="trigonometry/sketch.js"></script>
     <script src="classes/Block.js"></script>
   </body>
 </html>
