index.html: Added kinetic-typography\sketch.js script

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   </head>
 
   <body>
-    <!-- <script src="rotating-blocks/sketch.js"></script> -->
-    <script src="trigonometry/sketch.js"></script>
     <script src="classes/Block.js"></script>
+    <script src="classes/Box.js"></script>
+    <!-- <script src="rotating-blocks/sketch.js"></script> -->
+    <!-- <script src="trigonometry/sketch.js"></script> -->
+    <script src="kinetic-typography/sketch.js"></script>
   </body>
 </html>
