--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <body>
     <script src="classes/Block.js"></script>
     <script src="classes/Box.js"></script>
+    <script src="classes/Flower.js"></script>
     <!-- <script src="rotating-blocks/sketch.js"></script> -->
     <!-- <script src="trigonometry/sketch.js"></script> -->
-    <script src="kinetic-typography/sketch.js"></script>
+    <!-- <script src="kinetic-typography/sketch.js"></script> -->
+    <script src="flowers/sketch.js"></script>
   </body>
 </html>
